--- a/blog-gateway/src/main/resources/config/database.properties
+++ b/blog-gateway/src/main/resources/config/database.properties
@@ -1,4 +1,4 @@
-mysql.url=jdbc:mysql://192.168.1.5:3306/blog?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+mysql.url=jdbc:mysql://192.168.43.125:3306/blog?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
 mysql.username=root
 mysql.password=root
 mysql.driver=com.mysql.cj.jdbc.Driver
